# pdf-manager-service

./: .gitignore  README.md  README_PTBR.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
notebook/: pdf_tests.ipynb
src/: main.py
src/boundaries/: pdf_image_coverage.py  pdf_page_analyzer.py  pdf_service.py
src/controls/: pdf_exception.py
src/entities/dataclasses/: pdf_analysis_result.py  pdf_config.py  pdf_page_analysis.py  pdf_page_result.py  pdf_result.py
src/entities/enums/: pdf_page_type.py  pdf_type.py
