[project]
name = "pdf-manager-service"
version = "0.1.0"
description = "A modular and extensible service for managing PDF files — detect if content is primarily text or images, extract text, and analyze structure. Designed to meet specific project needs but flexible enough to serve as a foundation for scalable PDF processing workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdfminer-six>=20250506",
    "pymupdf>=1.26.0",
]

[dependency-groups]
dev = [
    "notebook>=7.4.3",
    "ruff>=0.11.11",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
run = "uv run fastapi dev app/main.py"
lint = "uv run ruff check ."
post_lint = "uv run ruff check . --diff"
format = "uv run ruff check . --fix"
post_format = "uv run ruff format ."
